[metadata]
name = ws1in44lcd
version = 0.0.1
author = Thea Barnes
author_email = thea@tsbarnes.com
description = A python library for the WaveShare 1.44in LCD HAT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tsbarnes/ws1in44lcd
project_urls =
    Bug Tracker = https://github.com/tsbarnes/ws1in44lcd/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
